--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <version>1.0.0</version>
 
     <name>ProducerConsumerProblem</name>
+    <dependencies>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+    </dependencies>
     <packaging>jar</packaging>
     <url>https://github.com/abmkrtchyan/ProducerConsumerProblem</url>
 
